Use Java 8, switch to lower case when looking up images, remove dead code